Fix image stretching due to flex grow

--- a/src/components/PostImages/PostImages.module.css
+++ b/src/components/PostImages/PostImages.module.css
@@ -35,7 +35,6 @@
 .imageItem {
   display: flex;
   justify-content: center;
-  flex: 1;
   width: 100%;
   max-height: 100%;
   max-width: 100%;
